--- a/CCC.html
+++ b/CCC.html
@@ -177,7 +177,7 @@
         // ctx.font="20px";
         ctx.fillStyle = colors[i % 18];
         ctx.fillText(
-          "PEIXIN",
+          "给佩欣疯狂打",
           this.x - this.width * 0.5,
           this.y - this.height * 0.5,
           this.width,
