--- a/cjc.html
+++ b/cjc.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>💗 Love you 💗</title>
+    <title>佩欣专用网站</title>
     <style type="text/css">
       body {
         margin: 0;
@@ -177,7 +177,7 @@
         // ctx.font="20px";
         ctx.fillStyle = colors[i % 18];
         ctx.fillText(
-          "给佩欣疯狂打call",
+          "给佩欣疯狂打CALL",
           this.x - this.width * 0.5,
           this.y - this.height * 0.5,
           this.width,
